Modified: Dockerfile to the industry Grade

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,21 +1,41 @@
-# Use the official Node.js image
-FROM node:21
+# Stage 1: Build
+FROM node:18-alpine AS builder
 
-# Set the working directory inside the container
+# Set working directory
 WORKDIR /app
 
-# Copy only package.json and package-lock.json first to optimize caching
-COPY package.json package-lock.json ./
-
 # Install dependencies
-RUN npm ci
+COPY package.json package-lock.json ./
+RUN npm ci --only=production
 
-# Copy the rest of the application files
+# Copy source code
 COPY . .
 
-# Expose the correct port (5001 in your case)
+# Stage 2: Production
+FROM node:18-alpine
+
+# Set working directory
+WORKDIR /app
+
+# Create a non-root user
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+
+# Copy dependencies from builder
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app ./
+
+# Set environment variables
+ENV NODE_ENV=production
+
+# Expose port
 EXPOSE 5001
+
+# Switch to non-root user
+USER appuser
 
 # Start the server
 CMD ["npm", "start"]
 
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+  CMD curl -f http://localhost:5001/health || exit 1
