--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,25 +1,66 @@
 server {
     listen 80;
-    server_name _;
+    server_name localhost;
+
     root /usr/share/nginx/html;
-    index index.html;
+    index index.html index.htm;
 
-    # Enable gzip compression
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
+    # Serve Static Files and Support SPA Routing
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Cache static assets
-    location /assets {
-        expires 1y;
-        add_header Cache-Control "public, no-transform";
+    # Proxy API Requests to Backend
+    location /api/ {
+        proxy_pass http://chatapp_backend:5001/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-XSS-Protection "1; mode=block";
-    add_header X-Content-Type-Options "nosniff";
+    # Proxy Socket.io Requests to Backend
+    location /socket.io/ {
+        proxy_pass http://chatapp_backend:5001/socket.io/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Enable Gzip Compression
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_proxied any;
+    gzip_min_length 256;
+
+    # Security Headers
+    add_header X-Frame-Options DENY always;
+    add_header X-Content-Type-Options nosniff always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header Referrer-Policy no-referrer-when-downgrade always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;" always;
+
+    # CORS Headers (Uncomment if Needed)
+    # add_header Access-Control-Allow-Origin "*" always;
+    # add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
+    # add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization" always;
+
+    # Logging
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    # Error Handling
+    error_page 404 /index.html;
+
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
 }
