--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,24 +1,13 @@
-# Build stage
-FROM node:18-alpine as build
+FROM node:18 as build
 WORKDIR /app
-COPY package*.json ./
+COPY package.json package-lock.json ./
 RUN npm install
-COPY . .
+COPY . ./
 RUN npm run build
 
-# Production stage
-FROM nginx:alpine
-
-# Create necessary directories and set permissions
-RUN mkdir -p /var/cache/nginx /var/run /var/log/nginx && \
-    chown -R nginx:nginx /var/cache/nginx /var/run /var/log/nginx
-
-# Copy built files and configuration
+FROM nginx:stable-alpine as production
 COPY --from=build /app/dist /usr/share/nginx/html
+RUN chown nginx:nginx /usr/share/nginx/html/*
 COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-# Set proper ownership for web files
-RUN chown -R nginx:nginx /usr/share/nginx/html
-
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
